# game-jam-indie-tales-1

./: Cargo.toml  Makefile.toml  README.md  index.html
src/: assets.rs  bullets.rs  main.rs  map.rs  misc.rs  movement.rs  physics.rs  player.rs
src/render/: mod.rs  square-tilemap.frag  square-tilemap.vert
