[package]
name = "storage-room-shootout"
version = "0.1.0"
authors = ["Neikos <neikos@neikos.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[features]
default = ["bevy/bevy_gltf", "bevy/bevy_winit", "bevy/render", "bevy/png"]

[dependencies]
bevy = { version="0.5.0", default-features=false, features = ["render"] }
bevy_ecs_tilemap = { version = "0.4.0", git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main"}
bevy_webgl2 = "0.5.2"
ordered-float = "2.6.0"
