[package]
name = "storage-room-shootout"
version = "0.1.0"
authors = ["Neikos <neikos@neikos.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = { version="0.5.0", features=["render"] }
bevy_ecs_tilemap = { version="0.4.0", git="https://github.com/StarArawn/bevy_ecs_tilemap", branch="main" }
bevy_rapier2d = { version="0.10.2", features=["render"] }
bevy_webgl2 = {version = "0.5.2", optional = true }
ordered-float = "2.6.0"
